--- a/Cloud4NetDemo.Backend/Cloud4NetDemo.Backend.csproj
+++ b/Cloud4NetDemo.Backend/Cloud4NetDemo.Backend.csproj
@@ -7,10 +7,14 @@
     <ItemGroup>
         <PackageReference Include="MediatR" Version="9.0.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="5.0.7" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.0.0" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Cloud4NetDemo.Application\Cloud4NetDemo.Application.csproj" />
+      <ProjectReference Include="..\Cloud4NetDemo.Frontend\Cloud4NetDemo.Frontend.csproj" />
       <ProjectReference Include="..\Cloud4NetDemo.Infrastructure\Cloud4NetDemo.Infrastructure.csproj" />
       <ProjectReference Include="..\Cloud4NetDemo.Shared\Cloud4NetDemo.Shared.csproj" />
     </ItemGroup>
