--- a/Cloud4NetDemo.Frontend/Cloud4NetDemo.Frontend.csproj
+++ b/Cloud4NetDemo.Frontend/Cloud4NetDemo.Frontend.csproj
@@ -5,9 +5,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.6"/>
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.6" PrivateAssets="all"/>
-        <PackageReference Include="System.Net.Http.Json" Version="5.0.0"/>
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.6" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.6" PrivateAssets="all" />
+        <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Cloud4NetDemo.Shared\Cloud4NetDemo.Shared.csproj" />
     </ItemGroup>
 
 </Project>
